--- a/Homeworks/Homework2/src/styles/content/footer.css
+++ b/Homeworks/Homework2/src/styles/content/footer.css
@@ -1,9 +1,9 @@
 .content__block_footer {
     position: absolute;
     bottom: 0;
-    margin-left: 76px;
-    width: 756px;
-    margin-bottom: 10px;
+    margin-left: 70px;
+    width: 783px;
+    margin-bottom: 62px;
 }
 
 .content__block_footer li{
@@ -19,6 +19,7 @@
 .content__block_footer_read {
     font-size: 21px;
     line-height: 50px;
+    letter-spacing: 0.5px;
     color: #5c6bc0;
     font-family: Lato, serif;
     font-weight: bold;
