--- a/Homeworks/Homework2/src/styles/footer.css
+++ b/Homeworks/Homework2/src/styles/footer.css
@@ -20,7 +20,7 @@
     font-family: Lato, serif;
     font-weight: bold;
     text-align: right;
-    margin-left: 7px;
+    margin-left: 40px;
 }
 
 .footer li a:hover{
@@ -31,11 +31,11 @@
     text-decoration: none;
 }
 
-
 .footer_text {
     text-align: center;
     font-size: 14px;
-    line-height: 30px;
+    letter-spacing: -0.022px;
+    line-height: 25px;
     color: #9da6d9;
     font-family: Lato, serif;
 }
