--- a/Homeworks/Homework2/src/templates/index.html
+++ b/Homeworks/Homework2/src/templates/index.html
@@ -34,7 +34,7 @@
                         I Do Travel
                     </div>
                 </a>
-                <div style="margin-left: 102px; width: 756px;">
+                <div style="margin-left: 94px; width: 756px;">
                     <div class="content__block_date">
                         Sep 20
                     </div>
@@ -47,10 +47,10 @@
                         <div class="content__block_text_black">
                             Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna.<br>
                             Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed<br>
-                            ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
-                            Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in<br>
-                            volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum<br>
-                            metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
+                            ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas. Morbi<br>
+                            posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in volutpat<br>
+                            quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum metus nisi,<br>
+                            aliquam sed tincidunt sit amet, pretium et augue.
                         </div>
                     </div>
                 </div>
@@ -66,14 +66,14 @@
         </li>
         <li>
             <div class="content__block" style="height: 1393px; padding: 0 0 0 0">
-                <img style="width: 952px" src="../images/content_img_1.png">
-                <a class="content__header" href="adsad">
+                <img style="width: 952px; height: 533px" src="../images/content_img_1.png">
+                <a class="content__header" href="adsad" style="width: 103px; margin-top: 17px">
                     <div>
                         I Do Observe
                     </div>
                 </a>
-                <div style="margin-left: 102px; width: 756px;">
-                    <div class="content__block_date">
+                <div style="margin-left: 94px; width: 756px;">
+                    <div class="content__block_date" style="margin-top: 26px">
                         Sep 18
                     </div>
                     <div class="content__block_title">
@@ -88,72 +88,74 @@
                             tellus cursus nec. Donec a euismod est, vitae accumsan purus. Proin ali-<br>
                             quet ex massa, ac finibus magna commodo vitae.
                         </div>
-                        <div class="content__block_text_black">
+                        <div class="content__block_text_black" style="margin-top: 24px">
                             Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna.<br>
                             Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed<br>
-                            ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
-                            Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in<br>
-                            volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum<br>
-                            metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
+                            ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas. Morbi<br>
+                            posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in volutpat<br>
+                            quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum metus nisi,<br>
+                            aliquam sed tincidunt sit amet, pretium et augue.
                         </div>
-                        <div class="content__block_text_black">
-                            Sed sagittis commodo dolor. Vivamus elementum sem sed sapien bibendum viverra. Curabitur<br>
-                            semper scelerisque turpis eu ullamcorper. Morbi tincidunt auctor orci id consequat. Nulla odio mi,<br>
-                            iaculis id congue quis, euismod id nisi. In varius congue diam, et viverra lorem bibendum ut.
+                        <div class="content__block_text_black" style="margin-top: 17px; letter-spacing: 0.05px">
+                            Sed sagittis commodo dolor. Vivamus elementum sem sed sapien bibendum viverra. Curabitur semper<br>
+                            scelerisque turpis eu ullamcorper. Morbi tincidunt auctor orci id consequat. Nulla odio mi, iaculis id<br>
+                            congue quis, euismod id nisi. In varius congue diam, et viverra lorem bibendum ut.
                         </div>
                     </div>
-                    <div class="content__block_footer">
-                        <a class="content__block_footer_read" href="read_more.html">READ MORE</a>
-                        <ul>
-                            <li><a class="content__block_footer_tags" href="zaglushka.html">#Yosemite</a></li>
-                            <li><a class="content__block_footer_tags" href="zaglushka.html">#Peak</a></li>
-                            <li><a class="content__block_footer_tags" href="zaglushka.html">#Explorer</a></li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="content__block_footer">
+                    <a class="content__block_footer_read" href="read_more.html">READ MORE</a>
+                    <ul>
+                        <li><a class="content__block_footer_tags" href="zaglushka.html">#Yosemite</a></li>
+                        <li><a class="content__block_footer_tags" href="zaglushka.html">#Peak</a></li>
+                        <li><a class="content__block_footer_tags" href="zaglushka.html">#Photo</a></li>
+                    </ul>
                 </div>
             </div>
         </li>
         <li>
-            <div class="content__block" style="height: 1129px">
-                <a class="content__header" href="adsad">
+            <div class="content__block" style="height: 1129px; margin-bottom: 100px">
+                <a class="content__header" href="adsad" style="width: 92px; margin-top: 18px">
                     <div>
                         I Do Reflect
                     </div>
                 </a>
-                <div style="margin-left: 102px; width: 756px;">
+                <div style="margin-left: 94px; width: 761px;">
                     <div class="content__block_date">
                         Sep 11
                     </div>
                     <div class="content__block_title">
                         Democracy means simply the bludgeoning<br>
-                        of the people by the people for the<br>
-                        people.
+                        of the people by the people for the people.
                     </div>
                     <div class="content__block_line"></div>
                     <div class="content__block_text">
+                        <img src="../images/content_img_2.png" style="float:left; margin-right: 12px; margin-bottom: 30px">
                         <div class="content__block_text_black">
-                            Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac elementum urna.<br>
-                            Pellentesque suscipit metus et egestas congue. Duis eu pellentesque turpis, ut maximus metus. Sed<br>
-                            ultrices tellus vitae rutrum congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
-                            Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut vitae rutrum augue, in<br>
-                            volutpat quam. Cras a viverra ipsum. Aenean ut consequat ex, vitae vulputate nunc. Vestibulum<br>
-                            metus nisi, aliquam sed tincidunt sit amet, pretium et augue.
+                            Quisque congue lacus mattis massa luctus, nec hendrerit purus aliquet. Ut ac<br>
+                            elementum urna. Pellentesque suscipit metus et egestas congue. Duis eu<br>
+                            pellentesque turpis, ut maximus metus. Sed ultrices tellus vitae rutrum<br>
+                            congue. Fusce luctus augue id nisl suscipit, vel sollicitudin orci egestas.<br>
+                            Morbi posuere venenatis ipsum, ac vestibulum quam dignissim efficitur. Ut<br>
+                            vitae rutrum augue, in volutpat quam. Cras a viverra ipsum. Aenean ut<br>
+                            consequat ex, vitae vulputate nunc. Vestibulum metus nisi, aliquam sed<br>
+                            tincidunt sit amet, pretium et augue.
                         </div>
-                        <div class="content__block_text_black">
+                        <div class="content__block_text_black" style="margin-top: 12px">
                             Mauris sem odio, rhoncus eget euismod sed, pellentesque sit amet felis.<br>
-                            Praesent dictum eleifend dui et efficitur. Nunc non orci in neque sodales semper. Etiam euismod volutpat lorem, vestibulum malesuada justo aliquet eget. Nunc lacus ante, varius a euismod eu, finibus commodo erat. Curabitur tincidunt sit amet nunc id interdum. Aliquam augue nisi, venenatis vitae ex at, lobortis fringilla nibh. Proin placerat enim vitae egestas eleifend. Aliquam
+                            Praesent dictum eleifend dui et efficitur. Nunc non orci in neque sodales semper. Etiam euismod volutpat lorem, <a href="adada">vestibulum malesuada</a> justo aliquet eget. Nunc lacus ante, varius a euismod eu, finibus commodo erat. Curabitur tincidunt sit amet nunc id interdum. Aliquam augue nisi, venenatis vitae ex at,<br>
+                            lobortis fringilla nibh. Proin placerat enim vitae egestas eleifend. Aliquam
                         </div>
                         <div class="content__block_text_black">
                             quis orci dignissim, posuere nibh a, eleifend augue. Cras quis metus nec tortor aliquet ullamcorper.<br>
                             Quisque varius porta metus, ut maximus dolor euismod nec. Suspendisse sit amet feugiat turpis.
                         </div>
-                        <div class="content__block_text_black">
-                            quis orci dignissim, posuere nibh a, eleifend augue. Cras quis metus nec tortor aliquet ullamcorper.<br>
-                            Quisque varius porta metus, ut maximus dolor euismod nec. Suspendisse sit amet feugiat turpis.
-                        </div>
-                        <div class="content__block_text_gray">
-                            Curabitur ut leo pulvinar, consectetur magna eu, feugiat purus. Morbi hendrerit<br>
-                            lectus turpis, a porttitor velit imperdiet id.
+                        <div style="margin-bottom: 28px; margin-top: 21px">
+                            <div class="content__block_text_line"></div>
+                            <div class="content__block_text_high">
+                                Curabitur ut leo pulvinar, consectetur magna eu, feugiat purus. Morbi hendrerit<br>
+                                lectus turpis, a porttitor velit imperdiet id.
+                            </div>
                         </div>
                         <div class="content__block_text_black">
                             Nunc placerat dolor at lectus hendrerit dignissim. Ut tortor sem, consectetur nec hendrerit ut,<br>
@@ -162,14 +164,13 @@
                             tincidunt. Aliquam gravida quam at ipsum sagittis bibendum.
                         </div>
                     </div>
-                    <div class="content__block_footer">
-                        <a class="content__block_footer_read" href="read_more.html">READ MORE</a>
-                        <ul >
-                            <li><a class="content__block_footer_tags" href="zaglushka.html">#Yosemite</a></li>
-                            <li><a class="content__block_footer_tags" href="zaglushka.html">#Peak</a></li>
-                            <li><a class="content__block_footer_tags" href="zaglushka.html">#Explorer</a></li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="content__block_footer">
+                    <a class="content__block_footer_read" href="read_more.html">READ MORE</a>
+                    <ul>
+                        <li><a class="content__block_footer_tags" href="zaglushka.html">#Democracy</a></li>
+                        <li><a class="content__block_footer_tags" href="zaglushka.html">#Introspection</a></li>
+                    </ul>
                 </div>
             </div>
         </li>
@@ -177,8 +178,8 @@
 </div>
 
 <div class="footer">
-    <img style="margin-left: auto; margin-right: auto; display: block;" src="../images/footer/PaloAlto.png">
-    <ul>
+    <img style="margin-top: 66px; margin-left: auto; margin-right: auto; display: block;" src="../images/footer/PaloAlto.png">
+    <ul style="margin-top: 43px">
         <li><a class="footer_button" style="color: #9da6d9" href="zaglushka.html">HOME</a></li>
         <li><a class="footer_button" href="zaglushka.html">ABOUT</a></li>
         <li><a class="footer_button" href="zaglushka.html">ARCHIVE</a></li>
@@ -187,16 +188,16 @@
             <img class="footer_search" src="../images/footer/search.png"></a></li>
     </ul>
 
-    <div class="footer_line"></div>
-        <div class="footer_text">
+    <div class="footer_line" style="margin-top: 33px"></div>
+        <div class="footer_text" style="margin-top: 33px">
             Nunc placerat dolor at lectus hendrerit dignissim. Ut tortor sem, consectetur nec hendrerit ut, ullamcorper ac odio. Donec viverra<br>
             ligula at quam tincidunt imperdiet. Nulla mattis tincidunt auctor.
         </div>
-    <div class="footer_line"></div>
-    <div class="footer_text">
+    <div class="footer_line" style="margin-top: 37px"></div>
+    <div class="footer_text" style="margin-top: 29px">
         © 2015 - Palo Alto. All Rights Reserved. Designed & Developed by<a href="index.html">PixelBuddha Team</a>
     </div>
-    <ul>
+    <ul style="margin-top: 28px">
         <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/facebook.png"></li>
         <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/twitter.png"></li>
         <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/instagram.png"></li>
